--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,5 +37,23 @@
 	"remoteUser": "${localEnv:USER}",
 	"containerUser": "${localEnv:USER}",
 	"updateRemoteUserUID": true,
-	"shutdownAction": "stopContainer"
+
+
+
+
+
+
+
+
+
+
+
+
+	"shutdownAction": "stopContainer",
+	"containerEnv": {
+		"VIRTUAL_ENV": "${workspaceFolder}/.venv"
+	},
+	"mounts": [
+		"source=${localEnv:HOME}/.ssh,target=/home/${localEnv:USER}/.ssh,readonly"
+	]
 }
