feat: experiment ttms

--- a/experiment_ttms/requirements.in
+++ b/experiment_ttms/requirements.in
@@ -1,1 +1,1 @@
-"tsfm_public @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.2.14"
+tsfm_public @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.2.17
