--- a/experiment_baseline/requirements.txt
+++ b/experiment_baseline/requirements.txt
@@ -4,10 +4,14 @@
 #
 #    pip-compile --output-file=experiment_baseline/requirements.txt base_requirements.in experiment_baseline/requirements.in
 #
+adagio==0.2.6
+    # via fugue
 alembic==1.14.0
     # via mlflow
 annotated-types==0.7.0
     # via pydantic
+appdirs==1.4.4
+    # via fs
 blinker==1.9.0
     # via flask
 cachetools==5.5.0
@@ -28,6 +32,8 @@ cloudpickle==3.1.0
     #   statsforecast
 contourpy==1.3.1
     # via matplotlib
+coreforecast==0.0.15
+    # via statsforecast
 cycler==0.12.1
     # via matplotlib
 databricks-sdk==0.40.0
@@ -38,16 +44,16 @@ deprecated==1.2.15
     #   opentelemetry-semantic-conventions
 docker==7.1.0
     # via mlflow
-filelock==3.16.1
-    # via
-    #   torch
-    #   triton
 flask==3.1.0
     # via mlflow
 fonttools==4.55.3
     # via matplotlib
+fs==2.4.16
+    # via triad
 fsspec==2024.12.0
-    # via torch
+    # via triad
+fugue==0.9.1
+    # via statsforecast
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.44
@@ -80,12 +86,11 @@ jinja2==3.1.5
     # via
     #   flask
     #   mlflow
-    #   torch
 joblib==1.4.2
     # via scikit-learn
 kiwisolver==1.4.8
     # via matplotlib
-llvmlite==0.34.0
+llvmlite==0.43.0
     # via numba
 mako==1.3.8
     # via alembic
@@ -102,15 +107,12 @@ mlflow==2.19.0
     # via -r base_requirements.in
 mlflow-skinny==2.19.0
     # via mlflow
-mpmath==1.3.0
-    # via sympy
-networkx==3.4.2
-    # via torch
-numba==0.51.2
+numba==0.60.0
     # via statsforecast
-numpy==2.1.3
+numpy==2.0.2
     # via
     #   contourpy
+    #   coreforecast
     #   gluonts
     #   matplotlib
     #   mlflow
@@ -121,38 +123,8 @@ numpy==2.1.3
     #   scipy
     #   statsforecast
     #   statsmodels
-nvidia-cublas-cu12==12.4.5.8
-    # via
-    #   nvidia-cudnn-cu12
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-cuda-cupti-cu12==12.4.127
-    # via torch
-nvidia-cuda-nvrtc-cu12==12.4.127
-    # via torch
-nvidia-cuda-runtime-cu12==12.4.127
-    # via torch
-nvidia-cudnn-cu12==9.1.0.70
-    # via torch
-nvidia-cufft-cu12==11.2.1.3
-    # via torch
-nvidia-curand-cu12==10.3.5.147
-    # via torch
-nvidia-cusolver-cu12==11.6.1.9
-    # via torch
-nvidia-cusparse-cu12==12.3.1.170
-    # via
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-nccl-cu12==2.21.5
-    # via torch
-nvidia-nvjitlink-cu12==12.4.127
-    # via
-    #   nvidia-cusolver-cu12
-    #   nvidia-cusparse-cu12
-    #   torch
-nvidia-nvtx-cu12==12.4.127
-    # via torch
+    #   triad
+    #   utilsforecast
 opentelemetry-api==1.29.0
     # via
     #   mlflow-skinny
@@ -168,12 +140,15 @@ packaging==24.2
     #   matplotlib
     #   mlflow-skinny
     #   statsmodels
+    #   utilsforecast
 pandas==2.2.3
     # via
     #   gluonts
     #   mlflow
     #   statsforecast
     #   statsmodels
+    #   triad
+    #   utilsforecast
 patsy==1.0.1
     # via statsmodels
 pillow==11.1.0
@@ -181,7 +156,9 @@ pillow==11.1.0
 protobuf==5.29.2
     # via mlflow-skinny
 pyarrow==18.1.0
-    # via mlflow
+    # via
+    #   mlflow
+    #   triad
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
@@ -219,7 +196,10 @@ scipy==1.15.0
     #   statsforecast
     #   statsmodels
 six==1.17.0
-    # via python-dateutil
+    # via
+    #   fs
+    #   python-dateutil
+    #   triad
 smmap==5.0.2
     # via gitdb
 sqlalchemy==2.0.36
@@ -228,24 +208,24 @@ sqlalchemy==2.0.36
     #   mlflow
 sqlparse==0.5.3
     # via mlflow-skinny
-statsforecast==0.7.1
+statsforecast==2.0.0
     # via -r experiment_baseline/requirements.in
 statsmodels==0.14.4
     # via statsforecast
-sympy==1.13.1
-    # via torch
 threadpoolctl==3.5.0
     # via
     #   scikit-learn
     #   statsforecast
 toolz==0.12.1
     # via gluonts
-torch==2.5.1
-    # via -r base_requirements.in
 tqdm==4.67.1
-    # via gluonts
-triton==3.1.0
-    # via torch
+    # via
+    #   gluonts
+    #   statsforecast
+triad==0.9.8
+    # via
+    #   adagio
+    #   fugue
 typing-extensions==4.12.2
     # via
     #   alembic
@@ -255,7 +235,6 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
-    #   torch
 tzdata==2024.2
     # via pandas
 ujson==5.10.0
@@ -264,6 +243,8 @@ urllib3==2.3.0
     # via
     #   docker
     #   requests
+utilsforecast==0.2.10
+    # via statsforecast
 werkzeug==3.1.3
     # via flask
 wrapt==1.17.0
